# IbinSina

./: .gitignore  CLAUDE.md  README.md  eval_mil.py  extract_features.py  infer_mil.py  pyproject.toml  train_mil.py  train_mil_cv.py
Visualization/: README.md
configs/: example_mlflow_tracking.json  example_wandb_tracking.json  extraction_panda_uni_v2.json  panda_multiclass_config.json  panda_multiclass_config_abmil_no_pretraining.json  panda_multiclass_cv_config.json
data_loading/: dataset.py  pytorch_adapter.py
docs/: FUSION_STRATEGIES.md  mlflow_guide.md
downstream/classification/multiple_instance_learning/data_loading/: __init__.py
downstream/classification/multiple_instance_learning/training/: config.py  encoder_mapping.py  mlflow_tracking.py  utils.py
examples/: cross_validation_demo.py  data_loading_demo.py
feature_extraction/: __init__.py
feature_extraction/foundational_models/: __init__.py  config.py  extractor.py
scripts/: start_mlflow.sh  stop_mlflow.sh  sync_mlflow_offline.py
tests/: __init__.py  conftest.py
tests/test_data_loading/: test_dataset.py  test_feature_loader.py  test_pytorch_adapter.py
tests/test_feature_extraction/: __init__.py  test_config.py  test_extractor.py
tests/test_integration/: __init__.py  test_data_pipeline.py  test_pipeline.py
tests/test_tracking/: test_factory.py  test_trackers.py
tests/test_training/: test_config.py  test_evaluator.py  test_trainer.py  test_utils.py
training/: __init__.py  config.py  evaluator.py  mlflow_tracking.py  trainer.py  utils.py
training/tracking/: __init__.py  factory.py
(+6 files in other folders)
