[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "computational-pathology"
version = "0.1.0"
description = "Training infrastructure for computational pathology"
requires-python = ">=3.10,<3.11"
dependencies = [
    # MIL-Lab (provides 'src' package with create_model, etc.)
    "src @ git+https://github.com/mahmoodlab/MIL-Lab.git",
    # TRIDENT (provides 'trident' package)
    "trident @ git+https://github.com/mahmoodlab/TRIDENT.git",
    # Core dependencies
    "wandb",
    "transformers>=4.40.0",
    "numpy<2",
    "timm>=0.9.2",
    "torch>=2.0.0",
    "torchvision",
    "h5py",
    "opencv-python",
    "pandas",
    "PyYAML",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "tqdm",
    "scikit-survival",
    "nystrom-attention",
    "future",
    "omegaconf",
    "loguru",
    "torch_geometric",
    "matplotlib",
    "pillow",
    "seaborn",
    "ipykernel",
    "openslide-python",
]

[tool.setuptools.packages.find]
include = ["training*", "data_loading*"]
exclude = ["dev*", "temp*", "docs", "dist*", "scripts*", "tests*", "checkpoints*", ".venv*"]
